--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     </li>
 
                     <li>
-                        <a href="https://www.instagram.com/clubedoddika?igsh=MW5wZ2Njdm82NXkwbg==" title="Ir para o instagram" target="_blank">
+                        <a href="https://www.instagram.com/ddikasamba?utm_source=qr&igsh=MW1ocmcwZndya3J2MA==" title="Ir para o instagram" target="_blank">
                             <i class="fab fa-instagram"></i>
                         </a>
                     </li>
